--- a/actividades/ej_01/index.html
+++ b/actividades/ej_01/index.html
@@ -11,13 +11,13 @@
         <h1>Actividad #1</h1>
     </header>
     <main>
-        <h2>tronquitos</h2>
+        <h2>Carlafacha</h2>
         <img src="https://pm1.aminoapps.com/6780/c9cc6b86493df115019fce3632d2bedc47564772v2_00.jpg" width="475">
     </main>
     <footer>
         <p>Representación Frontal y Visual de Datos</p>
         <p>Computadoras de Aeronaves</p>
-        <p>Alumno: Meabrio Lucas</p>
+        <p>Alumno: Santiago Rubio</p>
         <p>Prof. Carlassara Fabrizio</p>
         <p id="fecha"></p>
     </footer>
