--- a/actividades/ej_02/index.html
+++ b/actividades/ej_02/index.html
@@ -38,8 +38,8 @@
     <footer>
         <p>Representación Frontal y Visual de Datos</p>
         <p>Computadoras de Aeronaves</p>
-        <p>Alumno Lucas Meabrio</p>
-        <p>Profesor Carlassara Fabrizio</p>
+        <p>Alumno: Santiago Rubio</p>
+        <p>Profesor: Carlassara Fabrizio</p>
         <p id="fecha"></p>
     </footer>
 
