--- a/actividades/ej_03/index.html
+++ b/actividades/ej_03/index.html
@@ -3,22 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actividad #</title>
+    <title>Actividad 3</title>
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
-        <h1>Actividad #</h1>
+        <h1>Actividad 3</h1>
     </header>
     <main>
+        <label for="setpoint">Setpoint de Temperatura: </label>
+        <input type="range" id="setpoint" name="setpoint" min="0" max="30" step="0.1" value="15" onmouseup="updateSetpoint()">
+        <span id="setpoint-value">15</span>°C
+        <div>
+            <p>Temperatura Real: <span id="temp-real">0</span>°C</p>
+        </div>
+        <div>
+            <p>Estado del Buzzer: <span id="buzzer-status">OFF</span></p>
+        </div>
     </main>
     <footer>
         <p>Representación Frontal y Visual de Datos</p>
         <p>Computadoras de Aeronaves</p>
-        <p>Alumno XX</p>
+        <p>Alumno Santiago Rubio</p>
         <p>Prof. Carlassara Fabrizio</p>
         <p id="fecha"></p>
     </footer>
     <script src="scripts/base.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
