--- a/actividades/ej_03/index.html
+++ b/actividades/ej_03/index.html
@@ -4,32 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actividad 3</title>
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
         <h1>Actividad 3</h1>
     </header>
     <main>
-        <label for="setpoint">Setpoint de Temperatura: </label>
-        <input type="range" id="setpoint" name="setpoint" min="0" max="30" step="0.1" value="15" onmouseup="updateSetpoint()">
-        <span id="setpoint-value">15</span>°C
-        <div>
-            <p>Temperatura Real: <span id="temp-real">0</span>°C</p>
-        </div>
-        <div>
-            <p>Estado del Buzzer: <span id="buzzer-status">OFF</span></p>
-        </div>
+        <section>
+            <section>
+                <h2>Control de Temperatura</h2>
+                <label for="setpointSlider">Setpoint de Temperatura: <span id="setpointValue">15</span>°C</label><br>
+                <input type="range" id="setpointSlider" class="slider" min="0" max="30" value="15" oninput="updateSetpointValue(this.value)" onchange="setSetpoint(this.value)">
+            </section>
+            <h2>Temperatura Actual</h2>
+            <label>Temperatura: <span id="currentTemperature">0</span>°C</label>
+        </section>
+        <section>
+            <h2>Estado del Buzzer</h2>
+            <label>Estado: <span id="buzzerState">Apagado</span></label>
+        </section>
     </main>
     <footer>
-        <p>Representación Frontal y Visual de Datos</p>
-        <p>Computadoras de Aeronaves</p>
-        <p>Alumno Santiago Rubio</p>
-        <p>Prof. Carlassara Fabrizio</p>
-        <p id="fecha"></p>
+        <p>Representacion frontal y visual de datos</p>
+        <p>Computadoras de aeronaves </p>
+        <p>Alumno: Santiago Rubio</p>
+        <p>Profesor: Fabrizio Carlassara</p>
+        <p id="hoy"></p>
     </footer>
     <script src="scripts/base.js"></script>
-    <script src="scripts/index.js"></script>
+    <script>
+        function updateSetpointValue(value) {
+            document.getElementById("setpointValue").innerText = value;
+        }
+
+        function setSetpoint(value) {
+            fetch(`/setpoint?setpoint=${value}`, { method: 'POST' })
+                .then(response => console.log('Setpoint actualizado'))
+                .catch(err => console.error('Error al actualizar el setpoint', err));
+        }
+
+        function getCurrentTemperature() {
+            fetch('/temperature')
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById("currentTemperature").innerText = data.temperature.toFixed(2);
+                })
+                .catch(err => console.error('Error al obtener la temperatura', err));
+        }
+
+        function getBuzzerState() {
+            fetch('/buzzer')
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById("buzzerState").innerText = data.buzzer_state ? "encendido" : "apagado";
+                })
+                .catch(err => console.error('Error al obtener el estado del buzzer', err));
+        }
+
+        setInterval(getCurrentTemperature, 2000); // temperatura cada 2 seg
+        setInterval(getBuzzerState, 2000); // estado del buzzer cada 2 seg
+    </script>
 </body>
 </html>
