--- a/actividades/ej_03/index.html
+++ b/actividades/ej_03/index.html
@@ -23,7 +23,7 @@
 
         <!-- Estado del Buzzer -->
         <div id="buzzer_status">
-            Zumbador: <span id="buzzer_state">--</span>
+            Buzzer: <span id="buzzer_state">--</span>
         </div>
     </div>
     <header>
